# VjCosmosVST

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
Shaders/oF_originals/: bloom.frag  blur.frag  brightness.frag  crt.frag  edge.frag  glitch.frag  kaleidoscope.frag  mirror.frag  mono.frag  passthrough.vert  wave.frag
Source/: AudioAnalyzer.cpp  AudioAnalyzer.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SyphonOutput.h  SyphonOutput.mm
